<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img3"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:background="@drawable/rounded_button"
        android:text="@string/my_profile"
        android:textColor="#FBFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/search"
        android:textColor="#F4F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn" />

    <Button
        android:id="@+id/recommendations"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/recommendations"
        android:textColor="#F1F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/logout"
        android:textColor="#F3F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommendations" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="158dp"
        android:layout_height="30dp"
        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal"
        android:text="@string/dashboard"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="171dp"
        android:layout_height="165dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>